<resources>
    <string name="app_name">ScriptTool</string>
    <string name="action_settings">Settings</string>
    <string name="choosejar">jar</string>
    <string name="chooseclass">class</string>
    <string name="choosemethod">TestCase</string>


    <string name="touch">touch event</string>
    <string name="motion">motion event</string>
    <string name="trackball">trackball event</string>
    <string name="nav">nav event</string>
    <string name="majornav">majornav event</string>
    <string name="syskeys">syskeys event</string>
    <string name="appswitch">appswitch event</string>
    <string name="anyevent">anyevent event</string>


    <string name="seed">seed</string>
    <string name="runtime">run time(s)</string>
    <string name="crashes">ignore-crash</string>
    <string name="timeouts">ignore-timeout</string>
    <drawable name="bkcolor">#A8A8A8</drawable>

    <string name="process_free_mem">应用/剩余内存:</string>
    <string name="process_overall_cpu">应用/总体CPU:</string>
    <string name="start_time">启动时间:</string>
    <string name="total_usage">总使用率(%)</string>
    <string name="process_package">应用包名</string>
    <string name="process_name">应用名称</string>
    <string name="process_pid">应用PID</string>
    <string name="mem_size">机器内存大小(MB)</string>
    <string name="cpu_type">机器CPU型号</string>
    <string name="android_system_version">Android系统版本</string>
    <string name="mobile_type">手机型号</string>
    <string name="timestamp">时间</string>
    <string name="used_mem_PSS">应用占用内存PSS(MB)</string>
    <string name="used_mem_ratio">应用占用内存比(%)</string>
    <string name="mobile_free_mem">机器剩余内存(MB)</string>
    <string name="app_used_cpu_ratio">应用占用CPU率(%)</string>
    <string name="total_used_cpu_ratio">CPU总使用率(%)</string>
    <string name="traffic">流量(KB)</string>
    <string name="battery">电量(%)</string>
    <string name="current">电流(mA)</string>
    <string name="temperature">温度(C)</string>
    <string name="voltage">电压(V)</string>
    <string name="index">序号</string>
    <string name="realtraffic">实时流量(KB)</string>
</resources>
